# sdh_cafeteria_congestion

./: .gitmodules
back-server/: .gitignore  CMakeLists.txt  run.sh
back-server/conf.d/: api.sdhcc.conf
back-server/conf.d.old/: api.sdhcc.conf
back-server/serverkeys/: server.key  ssd_cc_server.crt
back-server/src/: CMakeLists.txt  main.cpp  main1.cpp.old
conf.d/: sdhcc.proxy.conf
config/nginx/: api.sdhcc.conf.old  sdhcc.conf  sdhcc.conf.old
config/supervisor/: supervisord.conf
config/supervisor/conf.d/: api.sdhcc.conf
front-app/: nginx.conf  package-lock.json
front-app/public/: index.html
front-app/sdh_cafeteria_congestion/: package.json  pnpm-lock.yaml
front-app/sdh_cafeteria_congestion/public/: index.html  manifest.json
front-app/sdh_cafeteria_congestion/src/: inforouter.tsx
front-app/src/: App.tsx  inforouter.tsx
sdh-caffeteria-congestion/: User_Setup.h  sdh-caffeteria-congestion.ino
